Add support for storage microservices
